@@ -3,6 +3,8 @@ ver 0.21.24 (not yet released)
   - "tagtypes" requires no permissions
 * database
   - simple: fix crash when mounting twice
+* decoder
+  - wildmidi: attempt to detect WildMidi using pkg-config
 * Android
   - fix build failure with Android NDK r21
 * Windows
